--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -1,4 +1,4 @@
-Source: ignition-fuel-tools4
+Source: ignition-fuel-tools5
 Standards-Version: 3.9.8
 Maintainer: Jose Luis Rivero <jrivero@osrfoundation.org>
 Section: science
@@ -9,17 +9,17 @@ Build-Depends: cmake,
                debhelper (>= 9),
                libignition-cmake2-dev,
                libignition-common3-core-dev (>= 3.0.0),
-               libignition-msgs5-dev,
+               libignition-msgs6-dev,
                libzip-dev,
                libjsoncpp-dev,
                libcurl4-openssl-dev,
                libyaml-dev,
                libtinyxml2-dev
-Vcs-Browser: https://github.com/ignition-release/ign-fuel-tools4-release
-Vcs-Hg: https://github.com/ignition-release/ign-fuel-tools4-release
+Vcs-Browser: https://github.com/ignition-release/ign-fuel-tools5-release
+Vcs-Git: https://github.com/ignition-release/ign-fuel-tools5-release
 Homepage: http://ignitionrobotics.org/
 
-Package: libignition-fuel-tools4
+Package: libignition-fuel-tools5
 Architecture: any
 Section: libs
 Pre-Depends: ${misc:Pre-Depends}
@@ -29,18 +29,18 @@ Description: Ignition fuel-tools classes and functions for robot apps - Shared l
   Ignition fuel-tools is a component in the ignition framework, a set of libraries
   designed to rapidly develop robot applications.
 
-Package: libignition-fuel-tools4-dev
+Package: libignition-fuel-tools5-dev
 Architecture: any
 Section: libdevel
 Depends: libignition-cmake2-dev, 
        libignition-common3-core-dev (>= 3.0.0),
-       libignition-msgs5-dev,
+       libignition-msgs6-dev,
        libzip-dev,
        libjsoncpp-dev,
        libcurl4-openssl-dev,
        libyaml-dev,
        libtinyxml2-dev,
-       libignition-fuel-tools4 (= ${binary:Version}),
+       libignition-fuel-tools5 (= ${binary:Version}),
        ${misc:Depends}
 Multi-Arch: same
 Description: Ignition fuel-tools classes and functions for robot apps - Development files
