--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -7,10 +7,10 @@ Build-Depends: cmake,
                doxygen,
                pkg-config,
                debhelper (>= 9),
+               ignition-tools,
                libignition-cmake2-dev (>= 2.3.0),
                libignition-common3-core-dev (>= 3.0.0),
                libignition-msgs6-dev,
-               libignition-tools-dev,
                libzip-dev,
                libjsoncpp-dev,
                libcurl4-openssl-dev,
@@ -36,6 +36,7 @@ Section: libdevel
 Depends: libignition-cmake2-dev (>= 2.3.0),
        libignition-common3-core-dev (>= 3.0.0),
        libignition-msgs6-dev,
+       libignition-tools-dev,
        libzip-dev,
        libjsoncpp-dev,
        libcurl4-openssl-dev,
