--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -7,7 +7,6 @@ Build-Depends: cmake,
                doxygen,
                pkg-config,
                debhelper (>= 9),
-               ignition-tools,
                libignition-cmake2-dev (>= 2.3.0),
                libignition-common3-core-dev (>= 3.0.0),
                libignition-msgs6-dev,
@@ -24,7 +23,8 @@ Package: libignition-fuel-tools5
 Architecture: any
 Section: libs
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends},
+         ignition-tools
 Multi-Arch: same
 Description: Ignition fuel-tools classes and functions for robot apps - Shared library
   Ignition fuel-tools is a component in the ignition framework, a set of libraries
