--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -10,6 +10,7 @@ Build-Depends: cmake,
                libignition-cmake2-dev (>= 2.3.0),
                libignition-common3-core-dev (>= 3.0.0),
                libignition-msgs6-dev,
+               libignition-tools-dev,
                libzip-dev,
                libjsoncpp-dev,
                libcurl4-openssl-dev,
