--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -7,9 +7,10 @@ Build-Depends: cmake,
                doxygen,
                pkg-config,
                debhelper (>= 9),
-               libignition-cmake2-dev,
+               libignition-cmake2-dev (>= 2.3.0),
                libignition-common3-core-dev (>= 3.0.0),
                libignition-msgs6-dev,
+               libignition-tools-dev,
                libzip-dev,
                libjsoncpp-dev,
                libcurl4-openssl-dev,
@@ -23,7 +24,8 @@ Package: libignition-fuel-tools5
 Architecture: any
 Section: libs
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends},
+         ignition-tools
 Multi-Arch: same
 Description: Ignition fuel-tools classes and functions for robot apps - Shared library
   Ignition fuel-tools is a component in the ignition framework, a set of libraries
@@ -32,9 +34,10 @@ Description: Ignition fuel-tools classes and functions for robot apps - Shared l
 Package: libignition-fuel-tools5-dev
 Architecture: any
 Section: libdevel
-Depends: libignition-cmake2-dev, 
+Depends: libignition-cmake2-dev (>= 2.3.0),
        libignition-common3-core-dev (>= 3.0.0),
        libignition-msgs6-dev,
+       libignition-tools-dev,
        libzip-dev,
        libjsoncpp-dev,
        libcurl4-openssl-dev,
