--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -8,7 +8,7 @@ Build-Depends: cmake,
                pkg-config,
                debhelper (>= 9),
                libignition-cmake2-dev (>= 2.3.0),
-               libignition-common3-core-dev (>= 3.0.0),
+               libignition-common4-core-dev,
                libignition-msgs7-dev,
                libignition-tools-dev,
                libzip-dev,
@@ -35,7 +35,7 @@ Package: libignition-fuel-tools6-dev
 Architecture: any
 Section: libdevel
 Depends: libignition-cmake2-dev (>= 2.3.0),
-       libignition-common3-core-dev (>= 3.0.0),
+       libignition-common4-core-dev,
        libignition-msgs7-dev,
        libignition-tools-dev,
        libzip-dev,
